# stackoverflow

./: README.md
python/: clean_all.sh  features.sh  fmt_all.sh  notes.txt  run_all.sh
python/church/: colors.py  (+3008 more)
rust/: .gitignore
rust/stackoverflow/church/: Cargo.toml  example.json  findbysize.sh  ids_stackoverflow.py  next.py  next.sh  notes.txt  nyy.sh  run.sh  tmp_stackoverflow.txt
rust/stackoverflow/church/src/: main.rs  stackoverflow_0001_24158114.rs  stackoverflow_0002_25106554.rs  stackoverflow_0003_30154541.rs  stackoverflow_0004_25877285.rs  stackoverflow_0005_34733811.rs  stackoverflow_0006_21747136.rs  stackoverflow_0007_57259126.rs  stackoverflow_0008_27043268.rs  stackoverflow_0009_25383488.rs  stackoverflow_0010_32300132.rs  stackoverflow_0011_26946646.rs  stackoverflow_0012_30340815.rs  stackoverflow_0013_28519997.rs  stackoverflow_0014_29008127.rs  stackoverflow_0015_26643688.rs  stackoverflow_0016_29483365.rs  stackoverflow_0017_27791532.rs  stackoverflow_0018_31609137.rs  stackoverflow_0019_26388861.rs  stackoverflow_0020_57458460.rs  stackoverflow_0021_31192956.rs  stackoverflow_0022_27840394.rs  stackoverflow_0023_28311868.rs  stackoverflow_0024_42917566.rs  stackoverflow_0025_19076719.rs  stackoverflow_0026_40006219.rs  stackoverflow_0027_31012923.rs  stackoverflow_0028_28123453.rs  stackoverflow_0029_36604010.rs  stackoverflow_0030_24047686.rs  stackoverflow_0031_47565203.rs  stackoverflow_0032_19605132.rs  stackoverflow_0033_30177395.rs  stackoverflow_0034_27535289.rs  stackoverflow_0035_33025887.rs  stackoverflow_0036_15619320.rs  stackoverflow_0037_57340308.rs  stackoverflow_0038_19650265.rs  stackoverflow_0039_28158738.rs  (+2961 more)
(+154 files in other folders)
