[package]
name = "church"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
hyper = { version = "0.14.23", features = ["full"] }
indoc = "1.0.7"
lazy_static = "1.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.16.0"
rand = "0.8.5"
random_choice = "0.3.2"
regex = "1.7.0"
reqwest = { version = "0.11.13" , features = ["blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.22.0", features = ["full"] }
unicode-segmentation = "1.10.0"

[features]
default = ["html_006"]
html_001 = []
html_002 = []
html_003 = []
html_004 = []
html_005 = []
html_006 = []
html_007 = []
html_008 = []
html_009 = []
html_010 = []
html_011 = []
html_012 = []
html_013 = []
html_014 = []
html_015 = []
html_016 = []
html_017 = []
html_018 = []
html_019 = []
html_020 = []
html_021 = []
html_022 = []
html_023 = []
html_024 = []
html_025 = []
html_026 = []
html_027 = []
html_028 = []
html_029 = []
html_030 = []
html_031 = []
html_032 = []
html_033 = []
html_034 = []
html_035 = []
html_036 = []
html_037 = []
html_038 = []
html_039 = []
html_040 = []
html_041 = []
html_042 = []
html_043 = []
html_044 = []
html_045 = []
html_046 = []
html_047 = []
html_048 = []
html_049 = []
html_050 = []
html_051 = []
html_052 = []
html_053 = []
html_054 = []
html_055 = []
html_056 = []
html_057 = []
html_058 = []
html_059 = []
html_060 = []

